--- a/WPF_Application/WPF_Application/WPF_Application.csproj
+++ b/WPF_Application/WPF_Application/WPF_Application.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Calculator_Model\Calculator_Model.csproj" />
+  </ItemGroup>
+
 </Project>
